Localize filter name

--- a/src/main/resources/PublishR_strings.properties
+++ b/src/main/resources/PublishR_strings.properties
@@ -2,3 +2,4 @@ POPUP_MENU_INSERT_FOOTNOTE=Insert PublishR footnote
 FOOTNOTE_TEXT_HINT=Footnote text
 PLAIN_FOOTNOTES=Plain footnote tags (pre v1.0)
 SETTINGS_TITLE=PublishR filter settings
+FILTER_NAME=PublishR documents
