--- a/src/main/resources/PublishR_strings.properties
+++ b/src/main/resources/PublishR_strings.properties
@@ -1,5 +1,5 @@
 POPUP_MENU_INSERT_FOOTNOTE=Insert PublishR footnote
 FOOTNOTE_TEXT_HINT=Footnote text
-PLAIN_FOOTNOTES=Plain footnote tags (pre v1.0)
+PLAIN_SHORTCUTS=Use plain tags (pre v1.0)
 SETTINGS_TITLE=PublishR filter settings
 FILTER_NAME=PublishR documents
