--- a/src/main/resources/PublishR_strings.properties
+++ b/src/main/resources/PublishR_strings.properties
@@ -1,5 +1,6 @@
 POPUP_MENU_INSERT_FOOTNOTE=Insert PublishR footnote
-FOOTNOTE_TEXT_HINT=Footnote text
+FOOTNOTE_TEXT_STUB=Enter footnote text here
+FOOTNOTE_HINT=Custom footnote
 PLAIN_SHORTCUTS=Use plain tags (pre v1.0)
 SETTINGS_TITLE=PublishR filter settings
 FILTER_NAME=PublishR documents
