Allow original formatting through context menu

--- a/src/main/resources/PublishR_strings.properties
+++ b/src/main/resources/PublishR_strings.properties
@@ -1,6 +1,16 @@
-POPUP_MENU_INSERT_FOOTNOTE=Insert PublishR footnote
+FILTER_NAME=PublishR documents
+
+SETTINGS_TITLE=PublishR filter settings
+SETTINGS_PLAIN_SHORTCUTS=Use plain tags (pre v1.0)
+
+POPUP_MENU_NAME=PublishR formatting
+POPUP_MENU_FORMAT_STRONG=Bold
+POPUP_MENU_FORMAT_EMPHASIS=Italic
+POPUP_MENU_FORMAT_SUPERSCRIPT=Superscript
+POPUP_MENU_FORMAT_SUBSCRIPT=Subscript
+POPUP_MENU_FORMAT_NAME=Person name
+POPUP_MENU_FORMAT_TITLE=Work title
+POPUP_MENU_INSERT_FOOTNOTE=Extra footnote
+
 FOOTNOTE_TEXT_STUB=Enter footnote text here
 FOOTNOTE_HINT=Custom footnote
-PLAIN_SHORTCUTS=Use plain tags (pre v1.0)
-SETTINGS_TITLE=PublishR filter settings
-FILTER_NAME=PublishR documents
