--- a/src/main/resources/PublishR_strings.properties
+++ b/src/main/resources/PublishR_strings.properties
@@ -14,3 +14,12 @@ POPUP_MENU_INSERT_FOOTNOTE=Extra footnote
 
 FOOTNOTE_TEXT_STUB=Enter footnote text here
 FOOTNOTE_HINT=Custom footnote
+
+FMT_BLOCK_QUOTE=Blockquote
+FMT_FOOTNOTE=Footnote
+FMT_HEADING=Heading
+FMT_LIST_ITEM=List item
+FMT_LINE_NUMBER=Line number
+FMT_TRANSCRIPT=Transcript
+FMT_LYRICS=Lyrics
+FMT_EMAIL=E-mail
