Allow to change tag colors through settings dialog

--- a/src/main/resources/PublishR_strings.properties
+++ b/src/main/resources/PublishR_strings.properties
@@ -2,6 +2,10 @@ FILTER_NAME=PublishR documents
 
 SETTINGS_TITLE=PublishR filter settings
 SETTINGS_PLAIN_SHORTCUTS=Use plain tags (pre v1.0)
+SETTINGS_EXTRA_TAG_COLOR_EXAMPLE=Use this color for extra tags
+SETTINGS_EXTRA_TEXT_COLOR_EXAMPLE=Use this color for text between extra tags
+SETTINGS_CHANGE_COLOR_BUTTON=Change
+SETTINGS_COLOR_DIALOG_TITLE=Choose color
 
 POPUP_MENU_NAME=PublishR formatting
 POPUP_MENU_FORMAT_STRONG=Bold
