--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,9 @@
+import com.github.spotbugs.SpotBugsTask
+
 plugins {
     id 'java'
-    id 'findbugs'
     id 'checkstyle'
+    id "com.github.spotbugs" version "2.0.0"
     id 'distribution'
     id 'maven'
 }
@@ -18,7 +20,7 @@ repositories {
 }
 
 def compileDependencies = [
-        'org.omegat:omegat:4.1.3-02',
+        'org.omegat:omegat:4.3.0',
         'commons-io:commons-io:2.4',
         'commons-lang:commons-lang:2.6'
 ]
@@ -58,29 +60,22 @@ jar {
 }
 
 /* Checkstyle */
-checkstyle {
-    config = resources.text.fromFile("${rootProject.projectDir}/config/checkstyle/checkstyle.xml")
-    ignoreFailures = true
-    toolVersion = '7.1'
-    sourceSets = [project.sourceSets.main]
-}
 tasks.checkstyleMain.setGroup('Verification')
-tasks.remove(tasks['checkstyleTest'])
+tasks.checkstyleTest.setEnabled(false)
 
-/* FindBugs */
-findbugs {
+/* SpotBugs */
+spotbugs {
     ignoreFailures = true
-    sourceSets = [project.sourceSets.main]
 }
 
-tasks.withType(FindBugs) {
+tasks.withType(SpotBugsTask) {
     setGroup('Verification')
     reports {
         xml.enabled = false
         html.enabled = true
     }
 }
-tasks.remove(tasks['findbugsTest'])
+tasks.spotbugsTest.setEnabled(false)
 
 artifacts {
     archives jar
