Add french quotes through popup menu

--- a/src/main/resources/PublishR_strings.properties
+++ b/src/main/resources/PublishR_strings.properties
@@ -14,6 +14,7 @@ POPUP_MENU_FORMAT_SUPERSCRIPT=Superscript
 POPUP_MENU_FORMAT_SUBSCRIPT=Subscript
 POPUP_MENU_FORMAT_NAME=Person name
 POPUP_MENU_FORMAT_TITLE=Work title
+POPUP_MENU_FORMAT_FRENCH_QUOTES=French quotes
 POPUP_MENU_INSERT_FOOTNOTE=Extra footnote
 
 FOOTNOTE_TEXT_STUB=Enter footnote text here
